--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 @media screen and (min-width: 700px) {
 	.grid-responsive {
 		display: grid;
-		grid-template-rows: 80px 1fr 1fr 1fr 1fr 80px;
+		grid-template-rows: 60px 1fr 1fr 1fr 1fr 60px;
 		grid-template-columns: repeat(3,1fr);
 	}
 
@@ -102,14 +102,20 @@
 	}
 }
 	
-
+/*Background*/
 .container {
-	height: 300px;
+	height: 400px;
+	width: 460px;
+	margin: 40px;
 	background: #86f;
-	padding: 30px;
+	padding: 30px 5px;
+	background-image: url(https://cdn-cf-east.streamable.com/image/7x7jnl.jpg?Expires=1639432260&Signature=ZVpfXUO98IBK85dBGlnE~vhm17MbFUpYWsAMlgfq-qcQxg6MOOU~bCNywe5-iw2kiBmmBou6V7HI9gyvEL6Yi2RG3mlFzbVy~cRVM7rrvis-GYGoXbA~2TvORQJHIfMUbI~acERDhyakYXm7w1syiYKYDy8RgQFwZ2JArjK8ZhBG-5DMjII3e0ilvzqadjSDiaS7iIWp4AgA7j9MwhhQ3XuxwVSgH~FJ9LNe7etGX8p9DQh7kNZkKRx1vc467oBMCf9zOpFML1iDGqyeDQZhgFQh3VEoR8CoQGluokCX7SKvDbVLTlPIbmXizzFhzxksCRozhEqTD0PPMqHjhmSk9g__&Key-Pair-Id=APKAIEYUVEN4EVB2OKEQ);
+	background-size: cover;  
+	background-position: center;
+	 
 }
 
-/*	 Varias cajas moviendose
+/*	Transisiones de varias cajas moviendose
 .caja {
 	background: #025;
 	height: 100px;
@@ -145,20 +151,18 @@
 	transition-timing-function: ease-in-out;
 }
 
-
 */
 
-/*Prueba de git*/
-/*Prueba de github*/
-
+/*Transisiones de animaciones
 .caja1 {
 	background: #025;
 	height: 100px;
 	width: 100px;
 	margin: 30px;
+	position: relative;  
 	animation-name: desplazarse; 
 	animation-duration: 3s;
-	position: relative;  
+	animation-iteration-count: 3;
 }
 
 @keyframes desplazarse {
@@ -176,3 +180,23 @@
 		background-color: green;
 	}
 }
+*/
+
+
+/*Transformaciones 
+.caja1 {
+	background-color: #025;
+	height: 80px;
+	width: 80px;
+	margin: 20px;
+	display: flex;
+	color: #fff;
+	transition: transform 1s;
+
+}
+
+.caja1:hover {
+	La funcion translate ahorra recursos
+	transform: translate(80px);
+}
+*/
