--- a/style.css
+++ b/style.css
@@ -12,7 +12,47 @@ a {
 h1 {
 	text-align: left;
 	margin: 50px;
-	width: 400px;
+	font-size: 2em;
+	text-shadow: 2px 2px 1px white;
+}
+
+.logo-img {
+	margin: 5px;
+	float: left;
+	width: 100px;
+}
+
+.contacto {
+	padding: 20px;
+	float: right;
+}
+
+.parrafo-descripcion {
+	width: 300px;
+	margin: 100px 50px;
+	font-size: 25px;
+	text-shadow: 1px 1px 1px white;
+}
+
+.subtitulos-aside {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	color: black;
+	font-size: 24px;
+}
+
+.instagram {
+	width: 30px;
+	height: 30px;
+	float: left;
+	margin-right: 5px;
+}
+
+.facebook {
+	width: 30px;
+	height: 30px;
+	float: left;
+	margin-left: 5px;
 }
 
 .grid-container {
@@ -32,6 +72,10 @@ h1 {
 	flex-basis: 600px;
 	flex-grow: 2;
 	flex-shrink: 0;
+	background-image: url(imagenes/fondo-responsive.jpg);
+	background-size: cover;
+	background-position: center;
+
 }
 
 .grid-aside {
@@ -48,6 +92,8 @@ h1 {
 	padding: 20px;
 	background-color: #888DA5;
 	flex-grow: 1;
+	display: flex;
+	justify-content: center;
 }
 
 
@@ -65,145 +111,17 @@ h1 {
 	.grid-section {
 		grid-row: 2 / 6;
 		grid-column: 1 / span 2;	
-		background-image: url(fondo-responsive.jpg);
-		background-size: cover;
-		background-position: center;
 }
 
 	.grid-aside {
 		grid-row: 2 / span 4;
 		grid-column: 3;
+
 	}
 
 	.grid-footer {
 		grid-row:  6;	
 		grid-column: 1 / span 3;
-		text-align: center;
 	}
 }
 
-.logo-img {
-	margin: 5px;
-	float: left;
-	width: 100px;
-}
-
-.contacto {
-	padding: 20px;
-	float: right;
-}
-
-
-
-.parrafo-descripcion {
-	width: 300px;
-	margin: 100px 50px;
-	font-size: 25px;
-}
-
-.subtitulos-aside {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	color: black;
-	font-size: 24px;
-}
-/*Background*/
-
-/*
-.container {
-	height: 400px;
-	width: 460px;
-	margin: 40px;
-	background: #86f;
-	padding: 30px 5px;
-	background-image: url(https://cdn-cf-east.streamable.com/image/7x7jnl.jpg?Expires=1639432260&Signature=ZVpfXUO98IBK85dBGlnE~vhm17MbFUpYWsAMlgfq-qcQxg6MOOU~bCNywe5-iw2kiBmmBou6V7HI9gyvEL6Yi2RG3mlFzbVy~cRVM7rrvis-GYGoXbA~2TvORQJHIfMUbI~acERDhyakYXm7w1syiYKYDy8RgQFwZ2JArjK8ZhBG-5DMjII3e0ilvzqadjSDiaS7iIWp4AgA7j9MwhhQ3XuxwVSgH~FJ9LNe7etGX8p9DQh7kNZkKRx1vc467oBMCf9zOpFML1iDGqyeDQZhgFQh3VEoR8CoQGluokCX7SKvDbVLTlPIbmXizzFhzxksCRozhEqTD0PPMqHjhmSk9g__&Key-Pair-Id=APKAIEYUVEN4EVB2OKEQ);
-	background-size: cover;  
-	background-position: center;
-}
-*/
-
-/*	Transisiones de varias cajas moviendose
-.caja {
-	background: #025;
-	height: 100px;
-	width: 100px;
-	transition-property: left;
-	transition-duration:  1s;
-	margin: 30px;
-	position: relative;
-	left: 0;
-}
-
-.container:hover > .caja {
-	left: 80%;
-}
-
-.caja:fisrt-child {
-	transition-timing-function: linear;
-}
-
-.caja:nth-child(2) {
-	transition-timing-function: ease;
-}
-
-.caja:nth-child(3) {
-	transition-timing-function: ease-in;
-}
-
-.caja:nth-child(4) {
-	transition-timing-function: ease-out;
-}
-
-.caja:nth-child(5) {
-	transition-timing-function: ease-in-out;
-}
-
-*/
-
-/*Transisiones de animaciones
-.caja1 {
-	background: #025;
-	height: 100px;
-	width: 100px;
-	margin: 30px;
-	position: relative;  
-	animation-name: desplazarse; 
-	animation-duration: 3s;
-	animation-iteration-count: 3;
-}
-
-@keyframes desplazarse {
-	0% {
-		left: 0;
-		background-color: blue;
-	}
-
-	50% {
-		background-color: red;
-	}
-
-	100% {
-		left: 80%;
-		background-color: green;
-	}
-}
-*/
-
-
-/*Transformaciones 
-.caja1 {
-	background-color: #025;
-	height: 80px;
-	width: 80px;
-	margin: 20px;
-	display: flex;
-	color: #fff;
-	transition: transform 1s;
-
-}
-
-.caja1:hover {
-	La funcion translate ahorra recursos
-	transform: translate(80px);
-}
-*/
