--- a/style2.css
+++ b/style2.css
@@ -58,33 +58,34 @@ a {
 
 .logo-img {
 	float: left;
-	width: 15vh;
+	width: 12vh;
 }
 
 .contacto {
-	float: right;
-	color: #4D4B4B;
-}
-
-.link-contacto {
 	font-size: 3vw;
-}
-
-.instagram {
-	width: 30px;
-	height: 30px;
-	float: left;
-	margin-right: 5px;
-}
-
-.facebook {
-	width: 30px;
-	height: 30px;
-	float: left;
-	margin-left: 5px;
+	color: #4D4B4B;
+	position: absolute;
+	padding-top: 2vh;
+	right: 5vw;
 }
 
 .grid-aside__item {
 	margin-left: 5vw;
 	margin-right: 5vw;
 }
+
+.grid-aside__item img {
+	width: 3.5vh;
+	padding-top: 1.2vh;
+}
+
+.grid-footer__item img {
+	width: 3.5vh;
+	padding-top: 1.2vh;
+}
+
+.grid-footer a {
+	margin-right: 4vw;
+	margin-left: 4vw;
+}
+
