--- a/style2.css
+++ b/style2.css
@@ -16,16 +16,14 @@
 	background-size: cover;
 	background-position: center;
 	flex-grow: 10;
+}
 
+.menu-pc {
+	display: none;
 }
 
 .grid-aside {
-	padding: 1vw;
 	background-color: #D6D4DD;
-	display: flex;
-	justify-content: center;
-	flex-grow: 1;
-	flex-basis: .3vh;
 }
 
 .grid-footer {
@@ -35,6 +33,18 @@
 	justify-content: center;
 	flex-grow: 1;
 	flex-basis: .3vh;
+}
+
+.menu-mobile {
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
+	flex-basis: .3vh;
+	padding: 1vw;
+}
+
+.grid-aside__item li {
+	display: none;
 }
 
 h1 {
@@ -59,10 +69,11 @@ a {
 .logo-img {
 	float: left;
 	width: 12vh;
+	padding: .3vh;
 }
 
 .contacto {
-	font-size: 3vw;
+	font-size: 4vw;
 	color: #4D4B4B;
 	position: absolute;
 	padding-top: 2vh;
@@ -72,6 +83,7 @@ a {
 .grid-aside__item {
 	margin-left: 5vw;
 	margin-right: 5vw;
+	list-style: none;
 }
 
 .grid-aside__item img {
@@ -85,7 +97,82 @@ a {
 }
 
 .grid-footer a {
-	margin-right: 4vw;
-	margin-left: 4vw;
+	margin-right: 7px;
+	margin-left: 7px;
 }
 
+@media screen and (min-width: 768px) {
+
+	.menu-mobile {
+		display: none;
+	}
+
+	.menu-pc {
+		display: inherit; 
+		padding: 20px;
+		flex-basis: 200px;
+		flex-shrink: 0;
+	}
+
+	.grid-container {
+		display: grid;
+		grid-template-rows: 60px 1fr 1fr 60px;
+		grid-template-columns: 1fr 1fr 320px;
+	}
+
+	.grid-header {
+		grid-column: 1 / span 3;
+	}
+
+	.grid-section {
+		grid-column: 1 / span 2;
+		grid-row: 2 / span 2;
+		justify-content: center;
+		overflow: auto;
+	}
+
+	.grid-aside {
+		grid-column: 3;
+		grid-row: 2 / span 2;
+		overflow: auto;
+	}
+
+	.grid-footer {
+		grid-column: 1 / span 3;
+		grid-row: 4;
+	}
+	
+	.grid-footer__item img {
+		width: 30px;
+		height: 30px;
+		padding-top: .2vh;
+	}
+
+	h1 {
+		text-align: left;
+		margin-top: 10vw;
+		margin-left: 5vw;
+		margin-right: 40vw;
+		font-size: 2em;
+	}
+
+	.parrafo-descripcion {
+		margin-top: 10vw;
+		margin-left: 5vw;
+		margin-right: 20vw;
+		font-size: 1.2em;
+	}
+
+	.subtitulos-aside {
+		padding-top: 15px;
+		padding-bottom: 15px;
+		color: black;
+		font-size: 24px;
+	}
+
+	.contacto {
+		font-size: 100%;
+		position: absolute;
+	}
+
+}
