--- a/style.css
+++ b/style.css
@@ -1,57 +1,3 @@
-/*
-h1 {
-	text-align: left;
-	width: 400px;
-	margin-top: 60px;
-	margin-left: 50px;
-	margin-right: 350px;
-	font-size: 2em;
-	text-shadow: 2px 2px 1px white;
-}
-
-a {
-	text-decoration: none;
-	color: #4D4B4B;
-}
-
-.logo-img {
-	margin: 5px;
-	float: left;
-	width: 100px;
-}
-
-.contacto {
-	padding: 20px;
-	float: right;
-}
-
-.parrafo-descripcion {
-	width: 300px;
-	margin: 100px 50px;
-	font-size: 1em;
-	text-shadow: 1px 1px 1px white;
-}
-
-.subtitulos-aside {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	color: black;
-	font-size: 24px;
-}
-
-.instagram {
-	width: 30px;
-	height: 30px;
-	float: left;
-	margin-right: 5px;
-}
-
-.facebook {
-	width: 30px;
-	height: 30px;
-	float: left;
-	margin-left: 5px;
-}
 
 .grid-container {
 	display: flex;
@@ -61,45 +7,116 @@ a {
 
 .grid-header {
 	background: #B0AFB3;
-	flex-basis: 50px;
+	flex-grow: 1;
+	flex-basis: .3vh;
 }
 
 .grid-section {
-	padding: 20px;
-	background-color: #6A668E;
-	flex-basis: 600px;
-	flex-grow: 2;
-	flex-shrink: 0;
 	background-image: url(imagenes/fondo-responsive.jpg);
 	background-size: cover;
 	background-position: center;
-	overflow: auto;
+	flex-grow: 10;
+}
 
+.menu-pc {
+	display: none;
 }
 
 .grid-aside {
-	padding: 20px;
 	background-color: #D6D4DD;
-	flex-basis: 200px;
-	flex-grow: 1;
-	flex-shrink: 0;
-	overflow: auto;
-	color: #545151;
 }
 
 .grid-footer {
-	padding: 20px;
+	padding: 1vw;
 	background-color: #888DA5;
-	flex-grow: 1;
 	display: flex;
 	justify-content: center;
+	flex-grow: 1;
+	flex-basis: .3vh;
 }
 
+.menu-mobile {
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
+	flex-basis: .3vh;
+	padding: 1vw;
+}
 
-@media screen and (min-width: 800px) {
+.grid-aside__item li {
+	display: none;
+}
+
+h1 {
+	text-align: center;
+	margin-top: 2vh;
+	font-size: 6vw;
+	text-shadow: 2px 2px 1px white;
+}
+
+.parrafo-descripcion {
+	text-align: justify;
+	font-size: 4vw;
+	text-shadow: 1px 1px 1px white;
+	margin: 2vh;
+}
+
+a {
+	text-decoration: none;
+	color: #4D4B4B;
+}
+
+.logo-img {
+	float: left;
+	width: 12vh;
+	padding: .3vh;
+}
+
+.contacto {
+	font-size: 4vw;
+	color: #4D4B4B;
+	position: absolute;
+	padding-top: 2vh;
+	right: 5vw;
+}
+
+.grid-aside__item {
+	margin-left: 5vw;
+	margin-right: 5vw;
+	list-style: none;
+}
+
+.grid-aside__item img {
+	width: 3.5vh;
+	padding-top: 1.2vh;
+}
+
+.grid-footer__item img {
+	width: 3.5vh;
+	padding-top: 1.2vh;
+}
+
+.grid-footer a {
+	margin-right: 7px;
+	margin-left: 7px;
+}
+
+@media screen and (min-width: 768px) {
+
+	.menu-mobile {
+		display: none;
+	}
+
+	.menu-pc {
+		display: inherit; 
+		padding: 20px;
+		flex-basis: 200px;
+		flex-shrink: 0;
+	}
+
 	.grid-container {
 		display: grid;
-		grid-template-rows: 60px 1fr 1fr 1fr 1fr 60px;
+		grid-template-rows: 60px 1fr 1fr 60px;
 		grid-template-columns: 1fr 1fr 320px;
 	}
 
@@ -108,22 +125,54 @@ a {
 	}
 
 	.grid-section {
-		grid-row: 2 / 6;
-		grid-column: 1 / span 2;	
+		grid-column: 1 / span 2;
+		grid-row: 2 / span 2;
 		justify-content: center;
-}
+		overflow: auto;
+	}
 
 	.grid-aside {
-		grid-row: 2 / span 4;
 		grid-column: 3;
-
+		grid-row: 2 / span 2;
+		overflow: auto;
 	}
 
 	.grid-footer {
-		grid-row:  6;	
 		grid-column: 1 / span 3;
+		grid-row: 4;
+	}
+	
+	.grid-footer__item img {
+		width: 30px;
+		height: 30px;
+		padding-top: .2vh;
+	}
+
+	h1 {
+		text-align: left;
+		margin-top: 10vw;
+		margin-left: 5vw;
+		margin-right: 40vw;
+		font-size: 2em;
+	}
+
+	.parrafo-descripcion {
+		margin-top: 10vw;
+		margin-left: 5vw;
+		margin-right: 20vw;
+		font-size: 1.2em;
+	}
+
+	.subtitulos-aside {
+		padding-top: 15px;
+		padding-bottom: 15px;
+		color: black;
+		font-size: 24px;
+	}
+
+	.contacto {
+		font-size: 100%;
+		position: absolute;
 	}
 
 }
-
-*/
