--- a/style2.css
+++ b/style2.css
@@ -1,50 +1,60 @@
 
 .grid-container {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
-.grid-header {
-	background: #B0AFB3;
-	flex-grow: 1;
-	flex-basis: .3vh;
-}
-
-.grid-section {
-	background-image: url(imagenes/fondo-responsive.jpg);
-	background-size: cover;
-	background-position: center;
-	flex-grow: 10;
+.grid-item {
+    padding: 2vw;
 }
 
 .menu-pc {
-	display: none;
+    display: none;
 }
 
-.grid-aside {
-	background-color: #D6D4DD;
+.header {
+    background: #B0AFB3;
+    flex-basis: 4vh;
+    padding: 0;
+    width: 100%;
 }
 
-.grid-footer {
-	padding: 1vw;
-	background-color: #888DA5;
-	display: flex;
-	justify-content: center;
-	flex-grow: 1;
-	flex-basis: .3vh;
+.nav__ul {
+    float: right;
+    list-style-type: none;
+    display: inline-flex;
+    margin-top: .8vh;
 }
 
-.menu-mobile {
-	display: flex;
-	justify-content: center;
-	flex-grow: 1;
-	flex-basis: .3vh;
-	padding: 1vw;
+.nav__li {
+    list-style-type: none;
+    margin-left: 1vh;
+    margin-right: 1vh;
 }
 
-.grid-aside__item li {
-	display: none;
+.nav__resp-ul {
+    display: none;
+    list-style-type: none;
+}
+
+section {
+    background-image: url(imagenes/fondo-responsive.jpg);
+	background-size: cover;
+	background-position: center;
+    flex-grow: 20;
+}
+
+aside {
+    background-color: #D6D4DD;
+    flex-grow: 1;
+}
+
+footer {
+    background-color: #888DA5;
+    flex-basis: 4vh;
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
@@ -66,113 +76,53 @@ a {
 	color: #4D4B4B;
 }
 
-.logo-img {
-	float: left;
-	width: 12vh;
-	padding: .3vh;
+.logo-img img {
+    margin: .5vw;
+    height: 4vh;
+    float: left;
 }
 
-.contacto {
-	font-size: 4vw;
-	color: #4D4B4B;
-	position: absolute;
-	padding-top: 2vh;
-	right: 5vw;
-}
-
-.grid-aside__item {
-	margin-left: 5vw;
-	margin-right: 5vw;
-	list-style: none;
-}
-
-.grid-aside__item img {
-	width: 3.5vh;
-	padding-top: 1.2vh;
-}
-
-.grid-footer__item img {
-	width: 3.5vh;
-	padding-top: 1.2vh;
-}
-
-.grid-footer a {
-	margin-right: 7px;
-	margin-left: 7px;
+.grid-footer__item {
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 @media screen and (min-width: 768px) {
 
-	.menu-mobile {
-		display: none;
-	}
+    .menu-mobile {
+        display: none;
+    }
 
-	.menu-pc {
-		display: inherit; 
-		padding: 20px;
-		flex-basis: 200px;
-		flex-shrink: 0;
-	}
+    .menu-pc {
+        display: inherit;
+    }
 
-	.grid-container {
-		display: grid;
-		grid-template-rows: 60px 1fr 1fr 60px;
-		grid-template-columns: 1fr 1fr 320px;
-	}
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 20vw;
+        grid-template-rows: 7vh 1fr 1fr 1fr 7vh;
+    }
+    
+    header {
+        grid-column: 1 / 6;
+        grid-row: 1;
+    }
 
-	.grid-header {
-		grid-column: 1 / span 3;
-	}
+    section {
+        grid-column: 1 / 5;
+        grid-row: 2 / 5;
+        flex-grow: 6;
+    }
 
-	.grid-section {
-		grid-column: 1 / span 2;
-		grid-row: 2 / span 2;
-		justify-content: center;
-		overflow: auto;
-	}
+    aside {
+        grid-column: 5;
+        grid-row: 2 / 5;
+        flex-grow: 1;
+    }
 
-	.grid-aside {
-		grid-column: 3;
-		grid-row: 2 / span 2;
-		overflow: auto;
-	}
-
-	.grid-footer {
-		grid-column: 1 / span 3;
-		grid-row: 4;
-	}
-	
-	.grid-footer__item img {
-		width: 30px;
-		height: 30px;
-		padding-top: .2vh;
-	}
-
-	h1 {
-		text-align: left;
-		margin-top: 10vw;
-		margin-left: 5vw;
-		margin-right: 40vw;
-		font-size: 2em;
-	}
-
-	.parrafo-descripcion {
-		margin-top: 10vw;
-		margin-left: 5vw;
-		margin-right: 20vw;
-		font-size: 1.2em;
-	}
-
-	.subtitulos-aside {
-		padding-top: 15px;
-		padding-bottom: 15px;
-		color: black;
-		font-size: 24px;
-	}
-
-	.contacto {
-		font-size: 100%;
-		position: absolute;
-	}
-
+    footer {
+        grid-column: 1 / 6;
+        grid-row: 5;
+    }
 }
+
