--- a/style5.css
+++ b/style5.css
@@ -1,7 +1,14 @@
-body {
-    width: 120%;
+.div1 {
+    background: red;
+    padding: 40px;   
 }
 
-p {
-    width: 200%;
+.input-prueba {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 6px;
+    color: #444;
+    outline: none !important;
 }
+
+
