--- a/style5.css
+++ b/style5.css
@@ -1,14 +1,63 @@
-.div1 {
-    background: red;
-    padding: 40px;   
+body {
+    font-family: sans-serif;
+    background: black;
 }
 
-.input-prueba {
-    border: 1px solid black;
+input {
+    display: block;
+    width: 96%;
+    padding: 9px;
+    margin: 10px 2%;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #48e;
+    background: transparent;
+    outline: none;
+    transition: background .3s;
+    color: #fff;
+}
+
+input::placeholder {
+    color: #48e;
+    transition: color .3s;
+}
+
+input:hover {
+    background: #26a;
+}
+input:hover::placeholder {
+    color: #fff;
+}
+
+input:focus {
+    
+}
+
+input[type="submit"] {
+    padding: 9px;
+    width: 50%;
+    margin-top: 20px;
+    color: #fff;
+    background: #26a;
+    border-radius: 4px;
+    border-bottom: none;
+    margin-top: 30px;
+}
+
+input[type="submit"]:hover {
+    background: #048;
+}
+
+form { 
+    width: 85%;
+    margin: auto;
+    background: #013;
+    padding: 30px;
     border-radius: 5px;
-    padding: 6px;
-    color: #444;
-    outline: none !important;
 }
 
-
+h2 {
+    margin-bottom: 30px;
+    color: #fff;
+    padding-left: 3%;
+}
