--- a/Formulario.css
+++ b/Formulario.css
@@ -29,14 +29,9 @@ input:hover::placeholder {
     color: #fff;
 }
 
-input:focus {
-    
-}
-
 input[type="submit"] {
     padding: 9px;
     width: 50%;
-    margin-top: 20px;
     color: #fff;
     background: #26a;
     border-radius: 4px;
@@ -50,7 +45,7 @@ input[type="submit"]:hover {
 
 form { 
     width: 85%;
-    margin: auto;
+    margin: 60px auto;
     background: #013;
     padding: 30px;
     border-radius: 5px;
@@ -60,4 +55,17 @@ h2 {
     margin-bottom: 30px;
     color: #fff;
     padding-left: 3%;
+}
+.green {
+    color: #9c9;
+}
+
+.red {
+    color: #c99;
+}
+
+.resultado {
+    margin-top: -40px; 
+    margin-left: 55%;  
+    padding: 9px;
 }
